--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Text</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,7 +11,7 @@
 		<a href="/">
 			<img src="images/logo.png">
 		</a>
-		<ul>
+		<ul class="navigation">
 			<li><a href="#news">НОВОСТИ</a></li>
 			<li><a href="#interview">ИНТЕРВЬЮ</a></li>
 			<li><a href="#infographic">ИНФОГРАФИКА</a></li>
