--- a/infographic.html
+++ b/infographic.html
@@ -2,27 +2,62 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Инфографика</title>
-<link rel="stylesheet" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Text</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div>
-		text
-	</div>
-	<form>
-		<label>
-			Комментарий<textarea name="comment"></textarea>
-		</label><br>
-		<label>
-			Имя<input type="text" name="first-name">
-		</label>
-		<label>
-			Анонимно<input type="checkbox" name="anonymously">
-		</label>
-		<label>
-			Отправить<input type="submit" value="Отправить">
-		</label>
-		<input type="hidden" name="hidden-value" value="infographic">
-	</form>
+	<nav>
+		<a href="#">
+			<img src="images/logo-3.png" class="cat" alt="logo-cat">
+		</a>
+	</nav>
+		<div class="main">
+			<div id="infographic">
+				<div class="author">Мария Ткач</div>
+				<div class="date">30.08.2017</div>
+				<p>
+					Поклонники винтажных вещей, джаза, линди хопа и буги-вуги — о том, где в Одессе можно бесплатно учиться танцевать свинг и почему это весело.
+					Денис Шевченко, основатель школы Lindy Lesson Odessa, координатор Odessa Jazz Fest, создатель джазового календаря Jazz-LIFE.od.ua.
+					В Одессе свинг развивается семь лет. Моими силами — три. Мне повезло, в начале своего обучения свинговым танцам – это общее название для всех танцев, появившихся в «эпоху свинга» 1920-1940 годов — я оказался в Берлине. Повезло, потому что я вернулся в Одессу и понял: то, что у нас – это не свинг.
+					Берлинская тусовка особенная, она отличается даже от всех немецких, там вечеринки каждый день, а то и несколько раз в день. Ты открываешь календарь и видишь — могу поехать сюда потанцевать, сюда на концерт, здесь тоже сегодня вечеринка, и так далее. Я был зимой на вечеринке в заброшенном хостеле. Идя туда, ты знаешь только адрес и телефон. Пришел, звонишь — тебе открывают. В заброшенном пищеблоке хостела стоит барная стойка с пивом, а в другой части играют музыканты — с трубой, гитарой и какой-то бочкой вместо барабанов. Это очень тру!
+				</p>
+				<div class="image">
+					<img src="images/Retro.jpg">
+				</div>
+			</div>
+			<div class="forma">
+				<form>
+					<label>
+						<span class="form-content">Имя</span><br><input type="text" name="first-name" class="text-name"><br>
+					</label>
+					<label>
+						<span class="form-content">Комментарий</span><br><textarea name="comment" class="text-comment"></textarea>
+					</label>
+					<div class="form-block">
+						<label>
+							<span class="form-content">Анонимно</span><input type="checkbox" name="anonymously" class="boxing">
+						</label>
+					</div>
+					<div class="form-block">
+						<label>
+							<input type="submit" value="Отправить" class="send">
+						</label>
+					</div>
+					<input type="hidden" name="hidden-value">
+				</form>
+			</div>
+		</div>
+	<footer>
+		<a href="/">
+			<img src="images/logo-1.png" class="cat-footer">
+		</a>
+		<ul class="footer-navigation">
+			<li class="li-list">E-mail: art@gmail.com</li>
+			<li class="li-list">Tel: +380 566 25 25</li>
+			<li class="li-list">VK: ArtTerritory</li>
+		</ul>
+	</footer>
+	<script src="js/script.js"></script>
 </body>
 </html>
