--- a/news.html
+++ b/news.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Text</title>
+	<title>ArtTerritory</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<nav>
-		<a href="#">
+		<a href="index.html">
 			<img src="images/logo-3.png" class="cat" alt="logo-cat">
 		</a>
 	</nav>
